<?xml version="1.0"?>
<package format="3">
  <name>rob_nav2</name>
  <version>0.0.4</version>

  <description>An example including Navigation</description>

  <maintainer email="cddg@gmail.com">CDDG</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>plansys2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nsv_msgs</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_pddl_parser</depend>
  <depend>xacro</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>plansys2_bringup</exec_depend>
  <exec_depend>plansys2_terminal</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_kdl</exec_depend>
  <exec_depend>tf2_py</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>